apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'application'

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

repositories {
    mavenCentral()
    mavenLocal()
}

def versions = [
        AkkaVersion    : "2.6.11",
        AkkaHttpVersion: "10.2.3",
        ScalaBinary    : "2.13"
]
dependencies {
    implementation platform("com.typesafe.akka:akka-http-bom_${versions.ScalaBinary}:${versions.AkkaHttpVersion}")
    implementation "com.typesafe.akka:akka-http_${versions.ScalaBinary}"
    implementation "com.typesafe.akka:akka-http-jackson_${versions.ScalaBinary}"

    implementation "com.typesafe.akka:akka-serialization-jackson_${versions.ScalaBinary}:${versions.AkkaVersion}"
    implementation "com.typesafe.akka:akka-actor-typed_${versions.ScalaBinary}:${versions.AkkaVersion}"
    implementation "com.typesafe.akka:akka-stream_${versions.ScalaBinary}:${versions.AkkaVersion}"

    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'

    testImplementation "com.typesafe.akka:akka-http-testkit_${versions.ScalaBinary}"
    testImplementation "com.typesafe.akka:akka-actor-testkit-typed_${versions.ScalaBinary}:${versions.AkkaVersion}"
    testImplementation 'junit:junit:4.13.1'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

mainClassName = "com.example.hello.AkkaQuickstart"

run {
    jvmArgs = ['--enable-preview']
    standardInput = System.in
}

test {
    jvmArgs = ['--enable-preview']
}
